# cluster_mgr

./: .gitattributes  .gitignore  CMakeLists.txt  Commons_Clause_License  README  README.md  clustermgr.cnf
doc/: Interface.md
include/mysql/: ma_list.h  mysqld_error.h
include/mysql/server/: my_list.h
lib/: libpq.so.5.11
resource/: cluster_mgr.cnf
resource/script/: restart_cluster_mgr.sh  start_cluster_mgr.sh  stop_cluster_mgr.sh
resources/: cluster_mgr.cnf
src/: ._main.cc  .gitignore  CMakeLists.txt  cluster_mgr.cnf  cluster_mgr_safe  config.cc  config.h  global.h  hdfs_client.h  http_client.cc  http_server.cc  http_server.h  job.cc  job.h  kl_cluster.cc  kl_cluster.h  log.cc  log.h  machine_info.cc  machine_info.h  main.cc  meta_sync.cc  meta_sync.h  node_info.cc  node_info.h  os.cc  os.h  proc_env.h  shard.cc  shard.h  sys.cc  sys.h  sys_config.h.in  test.c  test_sizeof  thread_manager.cc  thread_manager.h  txn.h
src/backup_storage/: CMakeLists.txt  backup_storage.cc  backup_storage.h
src/bld-dbg/: CMakeCache.txt  Makefile  cluster_mgr  cmake_install.cmake  install_manifest.txt  sys_config.h
src/bld-rel/: CMakeCache.txt  Makefile  cluster_mgr  cmake_install.cmake  install_manifest.txt
src/cluster_auto/: CMakeLists.txt  refresh_shard.cc  refresh_shard.h
src/cluster_collection/: CMakeLists.txt  machine_alive.cc  machine_alive.h  prometheus_control.cc  prometheus_control.h
src/cluster_debug/: CMakeLists.txt  cluster_debug.cc  cluster_debug.h
src/cluster_expand/: CMakeLists.txt  expand_mission.cc  expand_mission.h  table_pick.cc  table_pick.h
src/cluster_mission/: CMakeLists.txt  add_computer.cc  add_computer.h  add_node.cc  add_node.h  add_shard.cc  add_shard.h  cluster_comm.cc  cluster_comm.h  cluster_mission.cc  cluster_mission.h  create_cluster.cc  create_cluster.h  delete_cluster.cc  delete_cluster.h  delete_computer.cc  delete_computer.h  delete_node.cc  delete_node.h  delete_shard.cc  delete_shard.h  machine_mission.cc  machine_mission.h
src/cluster_operator/: CMakeLists.txt  computeInstallMission.cc  computeInstallMission.h  mysqlInstallRemote.cc  mysqlInstallRemote.h  postgresInstallRemote.cc  postgresInstallRemote.h  shardInstallMission.cc  shardInstallMission.h
src/coldbackup/: CMakeLists.txt  coldbackup.cc  coldbackup.h
src/example_mission/: CMakeLists.txt  example_mission.cc  example_mission.h
src/http_server/: CMakeLists.txt  http_server.cc  http_server.h  node_channel.cc  node_channel.h
src/http_server/proto/: clustermng.pb.cc  clustermng.pb.h  clustermng.proto
src/kl_mentain/: CMakeLists.txt  async_mysql.cc  async_mysql.h  cjson.cc  cjson.h  config.cc  config.h  func_timer.cc  func_timer.h  global.h  hdfs_client.cc  http_client.h  job.cc  job.h  kl_cluster.cc  kl_cluster.h  log.cc  machine_info.cc  machine_info.h  query_list.h  shard.cc  shard.h  sys.cc  sys.h  thread_manager.cc  thread_pool.h  txn.h
src/machine_mission/: CMakeLists.txt  machine_mission.cc  machine_mission.h  machine_new.cc  machine_new.h
src/op_mysql/: CMakeLists.txt  main.cc  op_mysql.cc  op_mysql.h
src/other_mission/: CMakeLists.txt  other_mission.cc  other_mission.h
src/raft_ha/: CMakeLists.txt  generate_id.cc  generate_id.h  raft_ha.cc  raft_ha.h  raft_mission.cc  raft_mission.h
src/raft_ha/proto/: raft_msg.pb.cc  raft_msg.pb.h  raft_msg.proto
src/rebuild_node/: CMakeLists.txt  rebuild_node.cc  rebuild_node.h
src/request_framework/: CMakeLists.txt  handleRequestThread.cc  handleRequestThread.h  missionRequest.cc  missionRequest.h  remoteTask.cc  remoteTask.h  requestBase.cc  requestBase.h  requestValueDefine.h  syncBrpc.cc  syncBrpc.h
src/restore_cluster/: CMakeLists.txt  restoreClusterMission.cc  restoreClusterMission.h  restoreComputeTask.cc  restoreComputeTask.h  restoreShardTask.cc  restoreShardTask.h
src/sync_mission/: CMakeLists.txt  sync_mission.cc  sync_mission.h
src/util_func/: CMakeLists.txt  error_code.cc  error_code.h  kl_mutex.h  meta_info.cc  meta_info.h  object_ptr.h  test_object_func.cc  test_oject_ptr.cc
test/add_shard_or_cn/: mgrcluster_add_sncn.py  norepcluster_add_sncn.py
test/backup_restore/: backup_restore_mgrcluster.py  backup_restore_norepcluster.py
test/hellentest/include/: check_create_cluster_state.inc  check_delete_cluster_state.inc  check_shard_state.inc  get_backup_status.inc  get_cluster_name.inc  get_restore_status.inc
test/hellentest/r/: add_comps_existcluster.result  add_nodes.result  add_shards.result  add_shards_existcluster.result  cluster_backup_restore_trans.result  del_nodes_existcluster.result  del_shard_existcluster.result  expand_cluster.result  expand_cluster_trans.result  expand_cluster_trans_abnormal12.result  expand_cluster_trans_abnormal13.result  expand_cluster_trans_abnormal14.result  expand_cluster_trans_abnormal2.result  expand_cluster_trans_abnormal3.result  expand_cluster_trans_abnormal4.result  expand_cluster_trans_abnormal5.result  expand_cluster_trans_abnormal8.result  expand_cluster_trans_diffdb.result  expand_cluster_trans_samedb.result  install_delete_rbrcluster.result  remote_control_killmysql.result
test/hellentest/t/: add_comps.test  add_comps_existcluster.test  add_nodes_existcluster.test  add_shards.test  cluster_backup_restore.test  cluster_table_repartition.test  del_debugpoint1.test  del_debugpoint2.test  del_debugpoint3.test  del_nodes_existcluster.test  (+22 more)
test/include/: wait_http_request_finish.inc
test/install_cluster/: auto_install_mgrcluster.py  auto_install_norepcluster.py
test/mgr_testscript/: auto_backup_storage.py  auto_control_instance.py  auto_create_machine.py  auto_install_mgrcluster.py  auto_mgr_add_meta.py  auto_set_variable.py  backup_restore_mgrcluster.py  mgrcluster_add_node.py  mgrcluster_add_sncn.py  query_del_cluster.py
test/no_testscript/: auto_backup_storage129.py  auto_control_instance.py  auto_create_machine129.py  auto_install_norepcluster.py  auto_norep_add_meta.py  auto_set_variable.py  backup_restore_norepcluster.py  norepcluster_add_sncn.py  query_del_cluster.py
test/r/: action_1st.result
test/t/: action_1st.test
(+138 files in other folders)
