add_library(http_server OBJECT http_server.cc node_channel.cc proto/clustermng.pb.cc)
target_include_directories(http_server INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
target_include_directories(http_server PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../")
target_include_directories(http_server PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../op_mysql")
target_include_directories(http_server PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../vendor/include")
target_include_directories(http_server PUBLIC "${PROJECT_BINARY_DIR}")
target_include_directories(http_server PUBLIC "/home/snowao/code/kunlun/zettalib/include")
